--- a/notebooks/Getting Started.html
+++ b/notebooks/Getting Started.html
@@ -11840,6 +11840,7 @@ div#notebook {
 <img src="images/jupyterterm.png" width="1000" height="200"></li>
 <li>Example: <a href="http://127.0.0.1:8889/?token=dcd21bc3a1c1331c6c61d51fb5a9d64c72fca7f4b2a6000e">http://127.0.0.1:8889/?token=dcd21bc3a1c1331c6c61d51fb5a9d64c72fca7f4b2a6000e</a></li>
 <li>Navigate to notebooks directory!! </li>
+<li>Open When Rotten Tomatoes isn’t Enough CSV.ipynb </li>
 </ul>
 
 </div>
